--- a/Kirakira/app/src/main/AndroidManifest.xml
+++ b/Kirakira/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="com.prm.android.kirakira">
 
     <application
+        android:name=".DAO.DBConfigration"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
