#Do: database #Content:   +  Xong tất cả model ngoại trừ bảng Process   + Các tính năng học dưới đã xong DAO:       - Lesson       - Listen to sentences and repeat       - Listen and find the correct sentences       - Fill in the blanks   + Xong nhập dữ liệu từ json vào DB.   + Chưa xây dựng xong dữ liệu.

--- a/Kirakira/app/src/main/AndroidManifest.xml
+++ b/Kirakira/app/src/main/AndroidManifest.xml
@@ -10,13 +10,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Controller.LoginActivity">
+        <!--<activity android:name=".Controller.LoginActivity">-->
+            <!--&lt;!&ndash;<intent-filter>&ndash;&gt;-->
+                <!--&lt;!&ndash;<action android:name="android.intent.action.MAIN"/>&ndash;&gt;-->
+
+                <!--&lt;!&ndash;<category android:name="android.intent.category.LAUNCHER"/>&ndash;&gt;-->
+            <!--&lt;!&ndash;</intent-filter>&ndash;&gt;-->
+        <!--</activity>-->
+
+        <activity android:name=".Controller.BuildDataActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
