#do: kiểm tra database, nếu không có dữ liệu bài học thì import dữ liệu từ json vào database

--- a/Kirakira/app/src/main/AndroidManifest.xml
+++ b/Kirakira/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
         </activity>
         <activity android:name=".Controller.RegisterActivity">
         </activity>
+        <activity android:name=".Controller.BuildDataActivity">
+
+        </activity>
+
     </application>
 
 </manifest>
