--- a/Kirakira/app/src/main/AndroidManifest.xml
+++ b/Kirakira/app/src/main/AndroidManifest.xml
@@ -23,26 +23,26 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.facebook.FacebookActivity"
-                  android:configChanges=
-                          "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-                  android:label="@string/app_name" />
+        <!--<activity android:name="com.facebook.FacebookActivity"-->
+                  <!--android:configChanges=-->
+                          <!--"keyboard|keyboardHidden|screenLayout|screenSize|orientation"-->
+                  <!--android:label="@string/app_name" />-->
 
-        <activity
-                android:name="com.facebook.CustomTabActivity"
-                android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="@string/fb_login_protocol_scheme" />
-            </intent-filter>
-        </activity>
+        <!--<activity-->
+                <!--android:name="com.facebook.CustomTabActivity"-->
+                <!--android:exported="true">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.VIEW" />-->
+                <!--<category android:name="android.intent.category.DEFAULT" />-->
+                <!--<category android:name="android.intent.category.BROWSABLE" />-->
+                <!--<data android:scheme="@string/fb_login_protocol_scheme" />-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
         <activity android:name=".Controller.ListenAndRepeatActivity">
         </activity>
 
         <activity android:name=".Controller.RegisterActivity"></activity>
-        <activity android:name=".Controller.BuildDataActivity"></activity>
+
         <activity android:name=".Controller.Lesson8Activity"></activity>
     </application>
 
