--- a/Kirakira/app/src/main/AndroidManifest.xml
+++ b/Kirakira/app/src/main/AndroidManifest.xml
@@ -10,12 +10,12 @@
     <application
         android:name=".DAO.DBConfigration"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon1"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".Controller.LoginActivity">
+        <activity android:name=".Controller.LauncherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
