--- a/Kirakira/app/src/main/AndroidManifest.xml
+++ b/Kirakira/app/src/main/AndroidManifest.xml
@@ -13,12 +13,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
         <activity android:name=".Controller.LauncherActivity">
-		</activity>
+        </activity>
         <activity android:name=".Controller.LoginActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -47,6 +44,8 @@
         <activity android:name=".Controller.RegisterActivity"/>
         <activity android:name=".Controller.Lesson8Activity"/>
         <activity android:name=".Controller.LessonActivity">
+        </activity>
+        <activity android:name=".Controller.PracticeActivity">
         </activity>
     </application>
 
