--- a/Kirakira/app/src/main/AndroidManifest.xml
+++ b/Kirakira/app/src/main/AndroidManifest.xml
@@ -14,9 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Controller.LoginActivity">
-
         </activity>
-
         <activity android:name=".Controller.LauncherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -48,6 +46,8 @@
         <activity android:name=".Controller.LessonActivity">
         </activity>
         <activity android:name=".Controller.PracticeActivity">
+        </activity>
+        <activity android:name=".Controller.Lesson4Activity">
         </activity>
     </application>
 
